Add supply and borrow apy

--- a/src/styles/_site.scss
+++ b/src/styles/_site.scss
@@ -61,6 +61,17 @@ button {
   color: #000000 !important;
 }
 
+.itemStatus {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000000 !important;
+}
+
 .itemInfo {
   font-weight: 500;
   font-size: 12px;
