Add multicall contract Refactor getTotals to use multicall (RlendingLens was slow as it brougth too much information) Rename getTotals to getTotalSupplysAndBorrows Use factor constant instead of using 10**18 Remove unused getCollateralFactor Fix APR in supply to use supplyAPR instead of borrowAPR Show both APR in Status page, remove APY from list Fix styles Add classes names to know in wich page we are standing Diferentitate supplied from suplied as collateral in health factor and in the SupplyBorrowGraph

--- a/src/styles/_supplyBorrowGraph.scss
+++ b/src/styles/_supplyBorrowGraph.scss
@@ -1,40 +1,41 @@
 .supply-borrow-graph{
-  h1{
+  h1 {
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 21px;
     color: #008CFF;
   }
-  h2{
+  h3 {
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 14px;
+  }
+  .supplied {
+    color: #25BD6B;
+  }
+  .collateral {
     color: #008CFF;
   }
-  h3{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 14px;
+  .borrowed {
     color: #828282;
   }
-  h4{
+  h4 {
     font-style: normal;
     font-weight: normal;
     font-size: 11px;
     line-height: 13px;
     color: #008CFF;
   }
-  span{
+  span {
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
     line-height: 14px;
     color: #828282;
   }
-  .borrow-limit{
+  .borrow-limit {
     font-style: normal;
     font-weight: 500;
     font-size: 22px;
