--- a/src/styles/_site.scss
+++ b/src/styles/_site.scss
@@ -13,9 +13,18 @@ h1 {
   color: #008CFF;
 }
 
+.v-btn:disabled svg path {
+  stroke: #C1C1C1
+}
+
 button {
   font-family: 'Rubik', sans-serif;
   font-style: normal;
+}
+
+.v-application i.v-icon {
+  margin-left: 5px !important;
+  margin-right: 5px !important;
 }
 
 .v-dialog {
