Rename Admin to Status Add Exchange Rate and Reserves Remove unsused functions and constants Refactor try to use BigNumber div matissa as default Remove APY column from status use APR instead Show APY in dialong instead APR Fix APR in supply dialogs Fix Supply-Borrow Ratio in Status Dialog as it should been multiplied by 100 Fix Total Suplyed in Status Dialog as it was being shown in cToken and not in underlying Filters now don't cast bigNumber to Number

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@
 @import "supplyBorrow";
 @import "dialog";
 @import "landing";
-@import "admin";
+@import "status";
 @import "marketDialog";
 @import "myActivity";
 @import "timeBalanceGraph";
