adding faq site and scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "status";
 @import "marketDialog";
 @import "myActivity";
+@import "faq";
 @import "timeBalanceGraph";
 @import "supplyBorrowGraph";
 @import "txList";
