--- a/src/styles/_docs.scss
+++ b/src/styles/_docs.scss
@@ -9,3 +9,17 @@
   width: 95%;
   text-align: center;
 }
+
+.pan-container {
+  text-align: center;
+  a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+  }
+
+  a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+}
