add transaction history and markets price to dashboard

--- a/src/styles/_myActivity.scss
+++ b/src/styles/_myActivity.scss
@@ -70,4 +70,25 @@
   .v-card {
     border-radius: 20px;
   }
+
+  .tweened-number {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 18px;
+    color: #000000;
+  }
+
+  .market-price-icon{
+    padding-top: 0px !important;
+  }
+
+  .market-price{
+    padding-left: 5% !important;
+  }
+
+  .money-price-detail{
+    padding-top: 2% !important;
+  }
+
 }
