fix tweened numbers

--- a/src/styles/_myActivity.scss
+++ b/src/styles/_myActivity.scss
@@ -78,6 +78,13 @@
     line-height: 18px;
     color: #000000;
   }
+  .tweened-number-blue {
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 18px;
+    text-transform: capitalize;
+    color: #008CFF
+  }
 
   .market-price-icon{
     padding-top: 0px !important;
