launch app rsk swap

--- a/src/styles/_supplyBorrow.scss
+++ b/src/styles/_supplyBorrow.scss
@@ -23,3 +23,10 @@
     }
   }
 }
+
+.rsw-swap-launch{
+  text-decoration:none !important;
+  color:black!important;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+}
