Remove DAI Add Hotjar Update images and logos

--- a/src/styles/_appBar.scss
+++ b/src/styles/_appBar.scss
@@ -1,6 +1,11 @@
 .app-bar {
   flex: initial;
 
+  .title {
+    display: flex;
+    align-items: center;
+  }
+
   h1 {
     font-weight: 500;
     font-size: 30px;
