Minor styles fixes

--- a/src/styles/_site.scss
+++ b/src/styles/_site.scss
@@ -5,6 +5,11 @@ div, p, h1, h2, h3, h4, h5, h6, body {
   font-style: normal;
 }
 
+.center-content {
+  display:flex;
+  align-items: center;
+}
+
 h1 {
   font-weight: 500;
   font-size: 20px;
