add snackbar style

--- a/src/styles/_supplyBorrow.scss
+++ b/src/styles/_supplyBorrow.scss
@@ -27,10 +27,9 @@
 .token-bridge-launch{
   a{
     
-    text-decoration:none !important;
     color:black!important;
     font-family: "Rubik", sans-serif;
-    font-style: normal;
+    font-style: italic;
   }
   div{
     display: flex;
