minor fixes to be compliant with 1280x800 resolution (13 inch screens)

--- a/src/styles/_docs.scss
+++ b/src/styles/_docs.scss
@@ -4,7 +4,7 @@
 
 .items {
   display: inline-table !important;
-  padding: 0 60px;
+  padding: 0 0;
   left: 45px !important;
   width: 95%;
   text-align: center;
