--- a/src/styles/_site.scss
+++ b/src/styles/_site.scss
@@ -35,8 +35,15 @@ button {
   border-radius: 20px !important;
 }
 
+.v-btn {
+  text-transform: none;
+}
+
+.v-btn:first-letter{
+  text-transform: capitalize !important;
+}
+
 .button {
-  text-transform: capitalize;
   margin: 0 40px 0 40px;
   font-weight: normal;
   font-size: 15px;
