--- a/src/styles/_appBar.scss
+++ b/src/styles/_appBar.scss
@@ -69,3 +69,97 @@
     text-overflow: ellipsis;
   }
 }
+
+.disconnected-btn {
+  word-break: normal;
+  tab-size: 4;
+  -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-repeat: no-repeat;
+  box-sizing: inherit;
+  margin: 0;
+  font: inherit;
+  overflow: visible;
+  font-style: normal;
+  align-items: center;
+  display: inline-flex;
+  flex: 0 0 auto;
+  font-weight: 500;
+  letter-spacing: 0.0892857143em;
+  justify-content: center;
+  outline: 0;
+  position: relative;
+  text-decoration: none;
+  text-indent: 0.0892857143em;
+  transition-duration: 0.28s;
+  transition-property: box-shadow, transform, opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  box-shadow: none !important;
+  border: thin solid currentColor;
+  background-color: transparent;
+  border-radius: 28px !important;
+  cursor: pointer;
+  text-transform: none;
+  font-size: 0.875rem !important;
+  will-change: box-shadow !important;
+  margin-right: 20px !important;
+  margin-left: 20px !important;
+  height: 36px !important;
+  min-width: 64px !important;
+  padding: 0 16px !important;
+  color: rgb(0, 140, 255) !important;
+  caret-color: rgb(0, 140, 255);
+}
+
+.connected-btn {
+  word-break: normal;
+  tab-size: 4;
+  -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-repeat: no-repeat;
+  box-sizing: inherit;
+  font: inherit;
+  overflow: visible;
+  border-style: none;
+  font-style: normal;
+  align-items: center;
+  display: inline-flex;
+  flex: 0 0 auto;
+  justify-content: center;
+  outline: 0;
+  position: relative;
+  text-decoration: none;
+  text-indent: 0.0892857143em;
+  transition-duration: 0.28s;
+  transition-property: box-shadow, transform, opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  text-transform: none;
+  margin: 0 40px 0 40px;
+  font-weight: normal;
+  line-height: 18px;
+  text-align: center;
+  color: white !important;
+  border-radius: 28px !important;
+  width: 300px;
+  letter-spacing: normal;
+  font-size: 0.875rem !important;
+  will-change: box-shadow !important;
+  margin-left: 20px !important;
+  height: 36px !important;
+  min-width: 64px !important;
+  padding: 0 16px !important;
+  background-color: rgb(0, 140, 255) !important;
+  border-color: rgb(0, 140, 255);
+}
+
+.v-toolbar__items > .v-btn {
+  height: 36px !important;
+}
