add disable to toggle span

--- a/src/styles/_toggleButton.scss
+++ b/src/styles/_toggleButton.scss
@@ -1,9 +1,12 @@
-.gold-mid {
-  background-color: #666666;
+.blue-mid {
+  background-color: #038cff;
 }
 
 .gray-lighter {
-  background-color: #c2c2c2;
+  background-color: #707070;
+}
+.grey-disabled {
+  background-color:#C1C1C1;
 }
 
 .toggle-wrapper {
