remove demo snackbar and add system bar

--- a/src/styles/_appBar.scss
+++ b/src/styles/_appBar.scss
@@ -146,3 +146,11 @@
 .v-toolbar__items > .v-btn {
   height: 36px !important;
 }
+
+.system-var-beta{
+  span{
+    color:white!important;
+    font-family: "Rubik", sans-serif;
+    font-style: italic;
+  }
+}
