fix design details

--- a/src/styles/_supplyBorrowGraph.scss
+++ b/src/styles/_supplyBorrowGraph.scss
@@ -6,6 +6,13 @@
     line-height: 21px;
     color: #008CFF;
   }
+  h2 {
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 18px;
+    text-transform: capitalize;
+    color: #008CFF;
+  }
   h3 {
     font-style: normal;
     font-weight: 500;
