--- a/src/styles/_transactionList.scss
+++ b/src/styles/_transactionList.scss
@@ -1,6 +1,11 @@
 .transaction-list {
   h2 {
    margin: 2%;
+   font-weight: 500;
+    font-size: 17px;
+    line-height: 18px;
+    text-transform: capitalize;
+    color: #008CFF;
   }
   a{
     color: #828282 !important;
