fix fax and docs

--- a/src/styles/_appBar.scss
+++ b/src/styles/_appBar.scss
@@ -153,4 +153,10 @@
     font-family: "Rubik", sans-serif;
     font-style: italic;
   }
+  a{
+    // color:#828282 !important;
+    color:white!important;
+    margin-left: 3px !important;
+    text-decoration:underline
+  }
 }
