--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -1,10 +1,11 @@
 .faq{
   h1 {
     font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 1.75rem;
+    line-height: 30px;
     text-transform: capitalize;
     color: #008CFF;
+    margin-top:1.5rem;
   }
 
   h2 {
@@ -32,9 +33,9 @@
 
   p {
     font-style: normal;
-    font-weight: normal;
-    font-size: 15px;
-    line-height: 18px;
+    font-weight: 300;
+    font-size: 1.25rem;
+    line-height: 30px;
     color: #000000;
   }
 
@@ -48,7 +49,7 @@
 
   a {
     color: inherit;
-    text-decoration: none;
+    text-decoration: underline;
   }
 
   .upper-banner{
@@ -69,5 +70,15 @@
 
   .v-card {
     border-radius: 20px;
+  }
+
+  ul{
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
   }
 }
