--- a/src/styles/_docs.scss
+++ b/src/styles/_docs.scss
@@ -12,6 +12,7 @@
 
 .pan-container {
   text-align: center;
+  margin-top: 40px;
   a {
     text-decoration: none;
     display: inline-block;
@@ -23,12 +24,29 @@
     color: black;
   }
 }
-p {
-  font-size: 1.25rem;
-  font-weight: 300;
+
+section {
+  margin-bottom: 3rem;
+  h1 {
+    color: #008CFF;
+    font-size: 30px;
+    font-weight: 600;
+    font-family: "Roboto", sans-serif !important;
+    margin-bottom: 12px !important;
+  }
+  h2 {
+    color: #008CFF;
+    font-size: 28px;
+    font-weight: 400;
+    font-family: "Roboto", sans-serif !important;
+    margin-bottom: 12px !important;
+  }
 }
 
-h1{
-  font-size: 1.75rem;
-  line-height: 30px;
+@media screen and (min-width: 600px) {
+  .text-sm-h4 {
+    font-size: 2.125rem !important;
+    line-height: 2.5rem;
+    letter-spacing: .0073529412em !important;
+  }
 }
